2010-12-30 Included a predict.demonoid function
2010-12-29 Included plot.demonoid and print.demonoid functions
2010-12-28 Demonic Suggestions has expanded dramatically
2010-12-25 Version Nomenclature changes to Year-Date-Month (10.12.24)
2010-12-24 The LaplacesDemon package was first put together
2010-12-13 Project Laplace's Demon began, and LaplacesDemon was written

 
