@@ -7,8 +7,14 @@
 
 predict.demonoid <- function(object, Model, Data, ...)
      {
+     ### Initial Checks
+     if(is.null(object)) {cat("ERROR: The object argument is null.\n")}
+     if(is.null(Model)) {cat("ERROR: The Model argument is null.\n")}
+     if(is.null(Data)) {cat("ERROR: The Data argument is null.\n")}
      ### p(y[rep] | y)
-     post <- as.matrix(object$Posterior2)
+     if(sum(is.na(object$Posterior2)) == 0)
+          {post <- as.matrix(object$Posterior2)}
+     else {post <- as.matrix(object$Posterior1)}
      yhat <- matrix(NA,length(Data$y),NROW(post))
      for(i in 1:NROW(post))
           {yhat[,i] <- Model(post[i,], Data)[[4]]}
