@@ -1,3 +1,5 @@
+2011-01-07 Corrected typos
+2011-01-06 Included summary.demonoid.ppc and plot.demonoid.ppc functions
 2010-12-30 Included a predict.demonoid function
 2010-12-29 Included plot.demonoid and print.demonoid functions
 2010-12-28 Demonic Suggestions has expanded dramatically
